# Monte_test

./: README.md  pyproject.toml
docs/: architecture.md
examples/: baseline.dsl
monte/: __init__.py  cli.py
monte/dsl/: model.py  parser.py
monte/execution/: engine.py
monte/generator/: json_generator.py
monte/pipeline/: orchestrator.py
monte/web/: __init__.py  app.py
monte/web/templates/: index.html
tests/: conftest.py  test_aggregator.py  test_cli.py  test_parser.py  test_pipeline.py  test_version_requirement.py  test_web_app.py
