[project]
name = "monte"
version = "0.1.0"
description = "Prototype implementation of the Monte simulation pipeline"
authors = [{name = "Monte Team"}]
requires-python = ">=3.11"
readme = "README.md"

[project.scripts]
monte = "monte.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
