[project]
name = "monte"
version = "0.1.0"
description = "Prototype implementation of the Monte simulation pipeline"
authors = [{name = "Monte Team"}]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "flask>=3.0",
]

[project.scripts]
monte = "monte.cli:main"
monte-web = "monte.web.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
